--- a/index.html
+++ b/index.html
@@ -179,7 +179,12 @@
             <div class="col-md-4 col-xs-12 text-center">
 
                 <p>P.O. BOX 3085-00100, Nairobi, Kenya.</p>
-                <p>Office Location</p>
+                <p>
+                    <a href="https://www.google.co.ke/maps/place/Lonrho+House,+12+Standard+St,+Nairobi/@-1.2848568,36.8228794,17z/data=!3m1!4b1!4m2!3m1!1s0x182f10d650725717:0x3c5aecb229ff62dd?hl=en" target="_blank">
+                        20th Flr, Lonrho House. 
+                        <span style="color: #305090;">[view map]</span>
+                    </a>
+                </p>
             </div>
             <div class="col-md-4 col-xs-12 text-center">
                 <!-- <p>P.O. BOX 3085-00100,</p>
