payments to electronic payments etc

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
             </div>
             <div class="col-xs-3">
                 <img src="images/cards_white.png" class="img-responsive center-block">
-                <h3 class="thin-font">Payments</h3>
+                <h3 class="thin-font">electronic Payments</h3>
             </div>
             <div class="col-xs-3">
                 <img src="images/advert_white.png" class="img-responsive center-block">
-                <h3 class="thin-font">advertising</h3>
+                <h3 class="thin-font">mobile advertising</h3>
             </div>
             <div class="col-xs-3">
                 <img src="images/g3.png" class="img-responsive center-block">
@@ -120,7 +120,7 @@
                         <li><i class="fa-li fa fa-check-square"></i>Software Quality assurance</li>
                     </ul>
                 </p>
-                
+
             </div>
             <div class="col-md-6 grid-bg">
                 <img src="images/g7057.png" class="center-block img-responsive">
@@ -132,7 +132,7 @@
                 <img src="images/payments.png" class="center-block img-responsive">
             </div>
             <div class="col-md-6 text-payments">
-                <h2 class="thin-font white-font">Payments</h2>
+                <h2 class="thin-font white-font">electronic Payments</h2>
                 <hr class="small">
                 <p class="text-justify os-font">
                     Nehemiah & Williams develops custom electronic payments platform according to clients needs. Nehemiah & Williams mission is to change how organizations engage payment technology to create enterprise value. We do so by providing software development, quality assurance and software project management that enable organizations to seize market opportunity, empower their people and drive operational efficiency. 
@@ -142,7 +142,7 @@
 
         <section class="row text-center section-adverts">
             <div class="col-md-6 text-adverts">
-                <h2 class="thin-font white-font">Advertising</h2>
+                <h2 class="thin-font white-font">mobile Advertising</h2>
                 <hr class="small">
                 <p class="text-justify os-font">
                     Fellow Points is a mobile based peer to peer advertisement platform that meets the industry's below the line marketing criteria. Fellow Points is an integrated web-based platform that combines the benefits of a business directory, local search engine, search engine optimisation (SEO) tool, customer relationship management (CRM) package and content management system (CMS).
