Added Geotrust certificate icon

--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
 
             <div class="col-md-4 col-xs-12 text-center">
                 <p><a href="tel:+254721912151">+254 721 912 151</a></p>
-                <p><a href="mailto:info@nehemiahandwilliams.com">info@nehemiahandwilliams.com</a></p>
+                <p><a href="mailto:info@nehemiahandwilliams.com">info@nehemiahandwilliams.com</a><script language="JavaScript" type="text/javascript" src="//smarticon.geotrust.com/si.js"></script>
+            <a tabindex="-1" href="https://smarticon.geotrust.com/smarticonprofile?Referer=https://nehemiahandwilliams.com" onclick="return gt__md();" target="GT__SIP"><img name="opowoveu" height="55" width="115" border="0" src="//smarticon.geotrust.com/smarticon?ref=nehemiahandwilliams.com" alt="Click for company profile" oncontextmenu="return false;"></a></p>
+                
             </div>
                 
         </footer>     
